:bug: corrige update de uma feira livre
